fix z-index

--- a/src/assets/styles/components/_timeline.scss
+++ b/src/assets/styles/components/_timeline.scss
@@ -41,7 +41,7 @@
         left: 15px;
         width: 30px;
         height: 30px;
-        z-index: 200;
+        z-index: 100;
         line-height: 15px;
         font-size: 20px;
     }
